--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
-        "fruitcake/laravel-cors": "^2.0",
+        "botman/botman": "^2.8",
+        "botman/driver-web": "^1.5",
+        "fruitcake/laravel-cors": "^3.0",
         "google/apiclient": "^2.0",
         "guzzlehttp/guzzle": "^7.5",
         "intervention/image": "^2.7",
